Updated StringUtil Class